--- a/src/styles.css
+++ b/src/styles.css
@@ -204,7 +204,7 @@ body,
 button,
 input {
   /* text-shadow: 0px 1.4px #714431; */
-  color: #f5f5f5;
+  color: #3e2731;
 }
 
 button:disabled {
@@ -346,7 +346,7 @@ img {
 .scrollable::-webkit-scrollbar-thumb {
   border-radius: 5px;
   border: 2.625px solid black;
-  background-color: #8b9bb4;
+  background-color: #eea368;
 }
 
 /* Hide scrollbar clsas or webkit-based browsers (Chrome, Safari and Opera) */
