--- a/src/styles.css
+++ b/src/styles.css
@@ -1458,3 +1458,30 @@ th {
     opacity: 0.5;
   }
 }
+
+.ellipsis {
+  font-family: "Basic", "Ark";
+  font-size: 14px;
+}
+
+.ellipsis:after {
+  overflow: hidden;
+  display: inline-block;
+  vertical-align: bottom;
+  -webkit-animation: ellipsis steps(4, end) 2s infinite;
+  animation: ellipsis steps(4, end) 2s infinite;
+  content: "\2026"; /* ascii code for the ellipsis character */
+  width: 0px;
+}
+
+@keyframes ellipsis {
+  to {
+    width: 1.25em;
+  }
+}
+
+@-webkit-keyframes ellipsis {
+  to {
+    width: 1.25em;
+  }
+}
